--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
 .App {
   text-align: center;
+  margin: auto;
+  width: 90%;
+  height: 90vh;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
 
 .App-logo {
